bootstrap tables solved

--- a/main.html
+++ b/main.html
@@ -3,13 +3,62 @@
 <html>
 
 <head>
+
+	<title> Bootstrap Tables </title>
 	<link rel="stylesheet" href="styles.css">
+
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+	rel="stylesheet"
+	integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+	crossorigin="anonymous">
+
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+
+	<p class="fw-normal text-muted"> List of all transactions </p>
+	<table class="table">
+		<caption> </caption>
+		<thead>
+		  <tr class="table-dark">
+			<th scope="col">#</th>
+			<th scope="col">From</th>
+			<th scope="col">To</th>
+			<th scope="col">Amount($)</th>
+		  </tr>
+		</thead>
+		<tbody>
+		  <tr>
+			<th scope="row">1</th>
+			<td>Mark</td>
+			<td>Otto</td>
+			<td>1000</td>
+		  </tr>
+		  <tr>
+			<th scope="row">2</th>
+			<td>Jacob</td>
+			<td>Thornton</td>
+			<td>1500</td>
+		  </tr>
+		  <tr>
+			<th scope="row">3</th>
+			<td>Jack</td>
+			<td>John</td>
+			<td>2000</td>
+		  </tr>
+		  <tr class="table-group-divider">
+			<th scope="row"></th>
+			<td></td>
+			<td class="text-end font-monospace fw-bold" id="total">Total</td>
+			<td class="fw-bold">4500</td>
+		  </tr>
+		</tbody>
+	  </table>
+
+    <script type="text/javascript" src="./script.js"> </script>
+
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"> </script>
 
 </body>
 
